[package]
name = "voracious_radix_sort"
version = "0.1.0"
authors = ["Axelle Piot <axelle.piot@lyart.fr>"]
edition = "2018"
description = "Very fast radix sort for all Rust primitive types and struct (except Array and tuple)"
license = "MIT"
documentation = "https://docs.rs/voracious_radix_sort/"
repository = "https://github.com/lakwet/voracious_sort"
keywords = ["sort", "algorithms", "radixsort", "research", "operationalresearch"]
categories = ["sort", "algorithm", "radix", "radixsort", "research"]

[dev-dependencies]
rand = "0.5.5"
