[package]
name = "voracious_radix_sort"
version = "1.1.1"
authors = ["Axelle Piot <axelle.piot@lyart.fr>"]
edition = "2018"
description = "State of the art radix sort algorithms. Single thread and multi thread versions."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/voracious_radix_sort/"
repository = "https://github.com/lakwet/voracious_sort"
keywords = ["sort", "algorithms", "radixsort", "research"]
categories = ["algorithms", "science", "concurrency"]

[features]
voracious_multithread = ["rayon"]

[dependencies]
rayon = { version = "1.7.0", optional = true }

[dev-dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
